--- a/user.css
+++ b/user.css
@@ -1221,6 +1221,10 @@ button#player-button-repeat, #player-button-thumbs-up, .view-player button[data-
 	background-color: var(--modspotify_main_fg);
 }
 
+.volumebar .progress-bar-wrapper .progress-bar {
+	background-color: rgba(var(--modspotify_rgb_main_bg), 0.7);
+}
+
 /* Search page */
 
 .SearchHeader__sticky-wrapper {
