--- a/user.css
+++ b/user.css
@@ -798,8 +798,7 @@ body.remotebar .view-player .player-bar-wrapper {
 	background: none;
 }
 
-/* Search bar in app wrapper
-	EXPERIMENTAL: using backdrop-filter blur, availible in Chrome >= 76 */
+/* Search bar in app wrapper */
 
 .h-search-field-wrapper {
 	display: flex;
@@ -817,6 +816,7 @@ body.remotebar .view-player .player-bar-wrapper {
 	border-radius: 100px;
 }
 
+//EXPERIMENTAL: using backdrop-filter blur, availible in Chrome >= 76
 .sticky-top .h-search-wrapper {
 	backdrop-filter: blur(5px);
 }
