--- a/user.css
+++ b/user.css
@@ -1050,8 +1050,12 @@ body.remotebar .view-player .player-bar-wrapper {
 	height: var(--bar-height) !important;
 	border-top: 0;
 	padding: 0 15px;
-	background: var(--modspotify_slider_bg);
-	box-shadow: 0 0 20px 5px var(--modspotify_main_bg);
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	background: rgba(var(--modspotify_rgb_slider_bg), 0.8);
+	backdrop-filter: blur(5px); //EXPERIMENTAL
+	//box-shadow: 0 0 20px 5px var(--modspotify_main_bg);
 }
 
 /* Fix scrolling text shadowing color */
