css: Disable scrolling text shadow; clashes with blur

--- a/user.css
+++ b/user.css
@@ -1060,11 +1060,13 @@ body.remotebar .view-player .player-bar-wrapper {
 
 /* Fix scrolling text shadowing color */
 .view-player .text-container .text-item-container .text-item .scroll-text-container:before {
-	background: linear-gradient(270deg, transparent, var(--modspotify_slider_bg));
+	/*background: linear-gradient(270deg, transparent, var(--modspotify_slider_bg));*/
+	display: none;
 }
 
 .view-player .text-container .text-item-container .text-item .scroll-text-container:after {
-	background: linear-gradient(90deg, transparent, var(--modspotify_slider_bg));
+	/*background: linear-gradient(90deg, transparent, var(--modspotify_slider_bg));*/
+	display: none;
 }
 
 /* Hide dots under controls */
